fixed centered text and jumbotron

--- a/project0/css/styles.css
+++ b/project0/css/styles.css
@@ -1,5 +1,13 @@
- .navlinks{
+.vertical-center{
 
-	color: red;
+	display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
+}
+.jumb{
+position:relative; 
+height:500px;
 }
