--- a/project0/css/styles.css
+++ b/project0/css/styles.css
@@ -1,3 +1,29 @@
+html {
+  font-size: 1rem;
+}
+
+@include media-breakpoint-up(sm) {
+  html {
+    font-size: 1.2rem;
+  }
+  .navtext{
+  	font-size:2rem;
+  }
+
+}
+
+@include media-breakpoint-up(md) {
+  html {
+    font-size: 1.4rem;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  html {
+    font-size: 1.6rem;
+  }
+}
+
 .vertical-center{
 
 	display: block;
