--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,9 @@
 /* Global styles
 --------------------*/
 
-/*@media only screen and (max-width: 576px){
-  #jum{
-    color: blue!important;
+@media only screen and (max-width: 576px){
+  .jumb{
+    color: #413a87;
   }
 
 }*/
@@ -45,18 +45,8 @@ header, footer {
   background-color: #2B2D42;
   color:#8D99AE;
 }
-header h1, header h2 {
-  color:#EDF2F4;
-  margin-top: 1px;
-  margin-bottom: 1px;
-}
 
 
-/* work Experience 
-----------------------------*/
-.work {
-  background: #EDF2F4;
-}
 
 /* Education 
 ----------------------------*/
